Long int IDproperties produces errors at weird spots. #37105

Closed
opened 2013-10-16 15:12:09 +02:00 by Alberto Torres Ruiz · 3 comments

%%%--- Operating System, Graphics card ---

Windows 8 x64, NVIDIA GeForce 660 Ti

- Blender version with error, and version that worked ---

2.68a and 2.69 RC2 for windows x64.

It works in any Linux version.

- Short description of error ---

When assigning a long int (64 bit) to a IDproperty, it fails at a later point (either in the script or outside) when the object is used. In this example, it throws an error when redrawing the scene or the properties area.

It should either always allow long ints for any platform or always throw an error right away. I've been for an hour or two trying to isolate this problem. It threw errors at a very weird places (such as in a for).

It prints this:
OverflowError: Python int too large to convert to C long

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Using Windows 64 bits, copy and paste this into a text block, then run.

import bpy
print('test')
bpy.context.scene['someprop'] = 2**32

  • originally it was a material['someprop'] = hash(some string)%%%
%%%--- Operating System, Graphics card --- Windows 8 x64, NVIDIA GeForce 660 Ti - Blender version with error, and version that worked --- 2.68a and 2.69 RC2 for windows x64. It works in any Linux version. - Short description of error --- When assigning a long int (64 bit) to a IDproperty, it fails at a later point (either in the script or outside) when the object is used. In this example, it throws an error when redrawing the scene or the properties area. It should either always allow long ints for any platform or always throw an error right away. I've been for an hour or two trying to isolate this problem. It threw errors at a very weird places (such as in a for). It prints this: OverflowError: Python int too large to convert to C long - Steps for others to reproduce the error (preferably based on attached .blend file) --- Using Windows 64 bits, copy and paste this into a text block, then run. import bpy print('test') bpy.context.scene['someprop'] = 2**32 - originally it was a material['someprop'] = hash(some string)%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r60808, r60809, r60810.%%%

%%%fixed r60808, r60809, r60810.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37105
No description provided.