fix [#37105] Long int IDproperties produces errors at weird spots.